Renamed chapter files; fix broken references

--- a/MathematicalMethods.tex
+++ b/MathematicalMethods.tex
@@ -151,19 +151,19 @@ Copyright 2020 Pascal Philipp. Subject to Apache License 2.0.
 
 \chapter{Vectors and Matrices}
 \label{ch:vm}
-\input{Chapters/ch1.tex}
+\input{Chapters/ch_vm.tex}
 
 \chapter{Functions of Several Variables}
 \label{ch:fsv}
-\input{Chapters/ch2.tex}
+\input{Chapters/ch_fsv.tex}
 
-\chapter{Integration \texttt{(written; to be expanded and brushed up)}}
+\chapter{Integration}
 \label{ch:i}
-\input{Chapters/ch3.tex}
+\input{Chapters/ch_i.tex}
 
-\chapter{Differential Equations \texttt{(written; to be exp.~and brushed up)}}
+\chapter{Differential Equations}
 \label{ch:de}
-\input{Chapters/ch4.tex}
+\input{Chapters/ch_de.tex}
 
 \printendnotes
 
